--- a/concept 1/src/1600x400/css/main.css
+++ b/concept 1/src/1600x400/css/main.css
@@ -20,90 +20,99 @@ body { margin:0px 0px; padding:0px; }
 }
 
 #bg_2x {
-	left:718px;
-	top:37px;
-	width:252px;
-	height:213px;
+	left:810px;
+	top:0px;
+	width:789px;
+	height:400px;
 	background-image:url(../img/bg_2x.png);
-	background-size:252px 213px;
+	background-size:789px 400px;
 }
 
 .ellipses {
     border-radius: 50%;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
 }
 
 .ellipse1 {
-    left: 25px;
-    top: 14px;
-    width: 20px;
-    height: 14px;
-}
-
-.ellipse2 {
-    left: 55px;
-    top: 38px;
-    width: 17px;
-    height: 12px;
-}
-
-.ellipse3 {
-    left: 20px;
-    top: 49px;
-    width: 25px;
+    left: 52px;
+    top: 35px;
+    width: 27px;
     height: 18px;
 }
 
+.ellipse2 {
+    left: 86px;
+    top: 65px;
+    width: 26px;
+    height: 18px;
+}
+
+.ellipse3 {
+    left: 43px;
+    top: 76px;
+    width: 30px;
+    height: 20px;
+}
+
 #ell_endAnim_2x {
-	left:30px;
-	top:29px;
-	width:37px;
-	height:22px;
+	left:45px;
+	top:45px;
+	width:56px;
+	height:35px;
 	background-image:url(../img/ell_endAnim_2x.png);
-	background-size:37px 22px;
+	background-size:56px 35px;
 }
 
 #logo_c_2x {
-	left:66px;
-	top:30px;
-	width:122px;
-	height:22px;
+	left:105px;
+	top:45px;
+	width:205px;
+	height:34px;
 	background-image:url(../img/logo_c_2x.png);
-	background-size:122px 22px;
+	background-size:205px 34px;
 }
 
 #c2_2x {
-	left:30px;
-	top:71px;
-	width:344px;
-	height:62px;
+	left:44px;
+	top:124px;
+	width:357px;
+	height:47px;
 	background-image:url(../img/c2_2x.png);
-	background-size:344px 62px;
+	background-size:357px 47px;
 }
 
 #c4_2x {
-	left:31px;
-	top:71px;
-	width:589px;
-	height:30px;
+	left:40px;
+	top:126px;
+	width:650px;
+	height:113px;
 	background-image:url(../img/c4_2x.png);
-	background-size:589px 30px;
+	background-size:650px 113px;
 }
 
 #c_2x {
-	left:29px;
-	top:71px;
-	width:140px;
-	height:56px;
+	left:40px;
+	top:125px;
+	width:594px;
+	height:113px;
 	background-image:url(../img/c_2x.png);
-	background-size:140px 56px;
+	background-size:594px 113px;
 }
 
 #cta_2x {
-	left:30px;
-	top:118px;
-	width:119px;
-	height:32px;
+	left:45px;
+	top:284px;
+	width:199px;
+	height:51px;
 	background-image:url(../img/cta_2x.png);
-	background-size:119px 32px;
+	background-size:199px 51px;
+}
+
+#legal_2x {
+	left:44px;
+	top:378px;
+	width:645px;
+	height:10px;
+	background-image:url(../img/legal_2x.png);
+	background-size:645px 10px;
 }
